# ESP32_HiFi_Player

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/bluetooth/: CMakeLists.txt  bluetooth.c  bluetooth.h  bt_app_core.c  bt_app_core.h
components/cs4398/: CMakeLists.txt  cs4398.c  cs4398.h
components/decoder/: CMakeLists.txt
components/decoder/flac/: flacdecoder.h
components/libsamplerate/: CMakeLists.txt
components/libsamplerate/src/: common.h  samplerate.c
components/sdcard/: CMakeLists.txt  sdcard.c  sdcard.h
components/st7789_lvgl/: CMakeLists.txt  font.c  lv_port.c  lv_port.h  lv_port_indev.c  st7789_driver.c  st7789_driver.h
components/ui/: CMakeLists.txt  ui.c  ui.h
components/ui/screens/: ui_Info.c  ui_List.c  ui_Menu.c  ui_Play.c  ui_Settings.c
main/: CMakeLists.txt  audio_resample.c  audio_resample.h  audioplay.c  audioplay.h  flacplay.c  flacplay.h  freertos_task.c  freertos_task.h  main_app.c  mp3play.c  mp3play.h
